# tree-sitter-cool

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-cool.pc.in
bindings/c/tree_sitter/: tree-sitter-cool.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cool/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCoolTests/: TreeSitterCoolTests.swift
examples/: class.cl  comment.cl  primes.cl
queries/: highlights.scm  indents.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: declarations.txt  expressions.txt  strings.txt
test/highlight/: functions.cl  identifiers.cl  keywords.cl  literals.cl  operators.cl
