[package]
name = "tree-sitter-cool"
description = "Tree-sitter grammar for the Cool programming language"
version = "0.2.0"
authors = ["Gustavo Dias de Aguiar <gustavodias.aguiar1@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cool"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/gustavodiasag/tree-sitter-cool"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
